fix - Consertando nomes para realizar operações

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criação de Personagem</title>
-    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet" href="../static/css/style-index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
@@ -24,7 +24,7 @@
                 <div class="radio-group">
                     <div class="radio-option"><input type="radio" id="raca-humano" name="raca" value="Humano" required><label for="raca-humano">Humano</label></div>
                     <div class="radio-option"><input type="radio" id="raca-elfo" name="raca" value="Elfo"><label for="raca-elfo">Elfo</label></div>
-                    <div class="radio-option"><input type="radio" id="raca-anao" name="raca" value="Anão"><label for="raca-anao">Anão</label></div>
+                    <div class="radio-option"><input type="radio" id="raca-anao" name="raca" value="Anao"><label for="raca-anao">Anão</label></div>
                     <div class="radio-option"><input type="radio" id="raca-halfling" name="raca" value="Halfling"><label for="raca-halfling">Halfling</label></div>
                 </div>
             </div>
@@ -34,7 +34,7 @@
                 <div class="radio-group">
                     <div class="radio-option"><input type="radio" id="classe-guerreiro" name="classe" value="Guerreiro" required><label for="classe-guerreiro">Guerreiro</label></div>
                     <div class="radio-option"><input type="radio" id="classe-mago" name="classe" value="Mago"><label for="classe-mago">Mago</label></div>
-                    <div class="radio-option"><input type="radio" id="classe-ladrao" name="classe" value="Ladrão"><label for="classe-ladrao">Ladrão</label></div>
+                    <div class="radio-option"><input type="radio" id="classe-ladrao" name="classe" value="Ladrao"><label for="classe-ladrao">Ladrão</label></div>
                 </div>
             </div>
 
