--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                 <label>Tipo de Aventura</label>
                 <div class="radio-group">
                      <div class="radio-option"><input type="radio" id="aventura-classica" name="aventura" value="Classica" required><label for="aventura-classica">Classica</label></div>
-                     <div class="radio-option"><input type="radio" id="aventura-aventureira" name="aventura" value="Aventureiro"><label for="aventura-aventureira">Aventureira</label></div>
+                     <div class="radio-option"><input type="radio" id="aventura-aventureira" name="aventura" value="Aventureira"><label for="aventura-aventureira">Aventureira</label></div>
                      <div class="radio-option"><input type="radio" id="aventura-heroica" name="aventura" value="Heroica"><label for="aventura-heroica">Heroico</label></div>
                 </div>
             </div>
